--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.adastra_one.musictime"
+        applicationId "com.ray.musictime"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -49,7 +49,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
-    def lifecycle_version = "2.2.0"
+    def lifecycle_version = "2.5.1"
     // - - ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // - - LiveData
@@ -62,6 +62,5 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:okhttp:$logging_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$logging_version"
-    implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
